@startuml

class PortStaff{

}

class User{

}

class UserRole{

}

class Company{

}

class GetTotalNumberOfOccupiedSlotsUI{
    -GetTotalNumberOfOccupiedSlotsController getTotalNumberOfOccupiedSlotsController
    +GetTotalNumberOfOccupiedSlotsUI()
    +run()
}

class GetTotalNumberOfOccupiedSlotsController{
    -Company company
    +GetTotalNumberOfOccupiedSlotsController()
    +GetTotalNumberOfOccupiedSlotsController(Company company)
    +getTotalNumberOfOccupiedSlotsController()
    +getCompany()
}

PortStaff --> GetTotalNumberOfOccupiedSlotsUI : Access
GetTotalNumberOfOccupiedSlotsUI -down-> GetTotalNumberOfOccupiedSlotsController : Connects with
PortStaff --> User : is a
User --> UserRole : has
GetTotalNumberOfOccupiedSlotsController -up-> GetTotalNumberOfOccupiedSlotsUI : Returns Info
GetTotalNumberOfOccupiedSlotsController --> Company : Connects with
Company --> GetTotalNumberOfOccupiedSlotsController : Returns Info
Company --> DataBase : Connects

@enduml